--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,24 +1,54 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400');
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+
+body {
+  position: relative;
+  height: 100%;
+  min-height: 100%;
+  padding: 0;
+  background-color: #33424D;
+  font-family: 'Roboto Slab', serif;
+  color: #2F424E;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.Top-Selling-Items {
+  background-color: #3B4756;
+  margin-left: 35px;
+  margin-right: 35px;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
+.Shoe-Card-Container {
+  height: flex;
+  background-color: white;
+  max-width: 720px;
+  border-color: black;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Shoe-Stats {
+  width: 500px;
+  padding-left: 5%;
+  display: inline-block;
+  text-align: left;
+  font-family: 'Roboto', serif;
+  width: 50%;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.Image {
+  margin-top: 50px;
   padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  float: left;
+  height: 100px;
+  width: 100px;
 }
